tests/tooling/fixtures/native/execution/negative/global_const_reference_function_initializer.objc3
module GlobalConstReferenceFunctionInitializer;

fn helper() -> i32 {
  return 1;
}

let value = helper;

fn main() -> i32 {
  return value;
}
